--- a/SmartHouse.MVC/appsettings.Development.json
+++ b/SmartHouse.MVC/appsettings.Development.json
@@ -1,8 +1,42 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-D87V24D;Database=SmartHouseDatabase;Trusted_Connection=True;encrypt=false",
+    "AdminDbConnection": "Server=DESKTOP-D87V24D;Database=AdminDb;Trusted_Connection=True;encrypt=false"
+  },
+  "Secrets": {
+    "Salt": "A547DF63-BB1B-4998-BB2C-064201C6F91D"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "Telegram",
+        "Args": {
+          "botToken": "6032232291:AAHxlpilFLPxhDWbRHRp3fzYV4cp0NG25Ys",
+          "chatId": "494898771",
+          "restrictedToMinimumLevel": "Warning"
+        }
+      }
+    ]
+  },
+  "Pagination": {
+    "DefaultPageSize": 12
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
