--- a/SmartHouse.MVC/SmartHouse.MVC.csproj
+++ b/SmartHouse.MVC/SmartHouse.MVC.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
@@ -33,7 +37,14 @@
     <ProjectReference Include="..\SmartHouse.Data.AdminDb\SmartHouse.Data.PassworStorage.csproj" />
     <ProjectReference Include="..\SmartHouse.Data\SmartHouse.Data.csproj" />
     <ProjectReference Include="..\SmartHouse.Repositories\SmartHouse.Repositories.csproj" />
-    <ProjectReference Include="..\SmartHouse.WebAPI\SmartHouse.WebAPI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
